@@ -6,6 +6,9 @@ CHANGES IN CUPS V1.1.7
 	- Documentation updates for encryption, SLP, etc.
 	- New Software Test Plan and automated test script to
 	  test CUPS prior to installation.
+	- cupsDo[File]Request() and cupsGetPPD() no longer
+	  block trying to reconnect to a crashed or inaccessable
+	  server.
 	- All scheduler configuration files are now case
 	  insensitive to match Apache.
 	- Added support for Apache ListenBackLog, LogFormat,
